tests/integration_rust/snapshots/integration_rust__add_tests__add_dependency_dont_create_project.snap
---
source: tests/integration_rust/add_tests.rs
expression: project.manifest().source.to_string()
---
[workspace]
name = "some-workspace"
platforms = []
channels = ['file://<LOCAL_CHANNEL>/']
preview = ['pixi-build']

[dependencies]
foo = "*"
