tests/integration_rust/snapshots/integration_rust__add_tests__add_git_deps.snap
---
source: tests/integration_rust/add_tests.rs
expression: lock.render_to_string().unwrap()
---
version: 6
environments:
  default:
    channels:
    - url: https://prefix.dev/conda-forge/
    packages:
      linux-64:
      - conda: https://prefix.dev/conda-forge/linux-64/_libgcc_mutex-0.1-conda_forge.tar.bz2
      - conda: https://prefix.dev/conda-forge/linux-64/_openmp_mutex-4.5-2_gnu.tar.bz2
      - conda: https://prefix.dev/conda-forge/linux-64/libgcc-14.2.0-h77fa898_1.conda
      - conda: https://prefix.dev/conda-forge/linux-64/libgomp-14.2.0-h77fa898_1.conda
      - conda: https://prefix.dev/conda-forge/linux-64/libstdcxx-14.2.0-hc0a3c3a_1.conda
      - conda: git+https://github.com/wolfv/pixi-build-examples?subdirectory=boost-check&branch=main#[FULL_COMMIT]
packages:
- conda: https://prefix.dev/conda-forge/linux-64/_libgcc_mutex-0.1-conda_forge.tar.bz2
  sha256: fe51de6107f9edc7aa4f786a70f4a883943bc9d39b3bb7307c04c41410990726
  md5: d7c89558ba9fa0495403155b64376d81
  license: None
  size: 2562
  timestamp: 1578324546067
- conda: https://prefix.dev/conda-forge/linux-64/_openmp_mutex-4.5-2_gnu.tar.bz2
  build_number: 16
  sha256: fbe2c5e56a653bebb982eda4876a9178aedfc2b545f25d0ce9c4c0b508253d22
  md5: 73aaf86a425cc6e73fcf236a5a46396d
  depends:
  - _libgcc_mutex 0.1 conda_forge
  - libgomp >=7.5.0
  constrains:
  - openmp_impl 9999
  license: BSD-3-Clause
  license_family: BSD
  size: 23621
  timestamp: 1650670423406
- conda: git+https://github.com/wolfv/pixi-build-examples?subdirectory=boost-check&branch=main#[FULL_COMMIT]
  name: boost-check
  version: 0.1.0
  build: hbf21a9e_0
  subdir: linux-64
  depends:
  - libstdcxx >=14
  - libgcc >=14
  channel: null
- conda: https://prefix.dev/conda-forge/linux-64/libgcc-14.2.0-h77fa898_1.conda
  sha256: 53eb8a79365e58849e7b1a068d31f4f9e718dc938d6f2c03e960345739a03569
  md5: 3cb76c3f10d3bc7f1105b2fc9db984df
  depends:
  - _libgcc_mutex 0.1 conda_forge
  - _openmp_mutex >=4.5
  constrains:
  - libgomp 14.2.0 h77fa898_1
  - libgcc-ng ==14.2.0=*_1
  license: GPL-3.0-only WITH GCC-exception-3.1
  license_family: GPL
  size: 848745
  timestamp: 1729027721139
- conda: https://prefix.dev/conda-forge/linux-64/libgomp-14.2.0-h77fa898_1.conda
  sha256: 1911c29975ec99b6b906904040c855772ccb265a1c79d5d75c8ceec4ed89cd63
  md5: cc3573974587f12dda90d96e3e55a702
  depends:
  - _libgcc_mutex 0.1 conda_forge
  license: GPL-3.0-only WITH GCC-exception-3.1
  license_family: GPL
  size: 460992
  timestamp: 1729027639220
- conda: https://prefix.dev/conda-forge/linux-64/libstdcxx-14.2.0-hc0a3c3a_1.conda
  sha256: 4661af0eb9bdcbb5fb33e5d0023b001ad4be828fccdcc56500059d56f9869462
  md5: 234a5554c53625688d51062645337328
  depends:
  - libgcc 14.2.0 h77fa898_1
  license: GPL-3.0-only WITH GCC-exception-3.1
  license_family: GPL
  size: 3893695
  timestamp: 1729027746910
