tests/integration_rust/snapshots/integration_rust__add_tests__add_git_with_specific_commit-2.snap
---
source: tests/integration_rust/add_tests.rs
expression: pixi.project().unwrap().manifest().source.to_string()
---
[project]
name = "test-channel-change"
channels = ["https://prefix.dev/conda-forge"]
platforms = ["osx-arm64"]
preview = ['pixi-build']

[dependencies]
boost-check = { git = "https://github.com/wolfv/pixi-build-examples", rev = "9de9e1b", subdirectory = "boost-check" }
