tests/integration_rust/snapshots/integration_rust__add_tests__add_pypi_git.snap
---
source: tests/integration_rust/add_tests.rs
expression: pixi.project().unwrap().manifest().source.to_string()
---
[project]
name = "test-channel-change"
channels = ["https://prefix.dev/conda-forge"]
platforms = ["[CURRENT_PLATFORM]"]

[pypi-dependencies]
boltons = { git = "https://github.com/mahmoud/boltons.git" }
